# iso3166-updates

./: .gitignore  .readthedocs.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  ToDo.md  UPDATES.MD  demo.ipynb  get_all_iso3166_updates.py  get_all_iso3166_updates.sh  get_latest_iso3166_updates_demo.ipynb  iso3166-updates.csv  iso3166-updates.json  iso3166-updates.xml  iso3166_updates_demo.ipynb  pyproject.toml  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: CHANGELOG.md  README.md  auto_update_iso3166_updates.yml  build_test.yml  build_test_deploy.yml  check_for_updates.yml  deploy_pypi.yml  deploy_test_pypi.yml  deploy_testpypi.yml
docs/: README.md  api.rst  conf.py  contributing.rst  index.rst  requirements.txt  usage.rst
iso3166-check-for-updates/: Dockerfile  README.md  check_for_updates.py  get_all_iso3166_updates.py  requirements.txt
iso3166-updates/: iso3166-updates-AD.csv  iso3166-updates-AE.csv  iso3166-updates-AF.csv  iso3166-updates-AG.csv  iso3166-updates-AL.csv  iso3166-updates-AM.csv  iso3166-updates-AO.csv  iso3166-updates-AR.csv  iso3166-updates-AT.csv  iso3166-updates-AU.csv  iso3166-updates-AZ.csv  iso3166-updates-BA.csv  iso3166-updates-BB.csv  iso3166-updates-BD.csv  iso3166-updates-BE.csv  iso3166-updates-BF.csv  iso3166-updates-BG.csv  iso3166-updates-BH.csv  iso3166-updates-BI.csv  iso3166-updates-BJ.csv  iso3166-updates-BL.csv  iso3166-updates-BN.csv  iso3166-updates-BO.csv  iso3166-updates-BQ.csv  iso3166-updates-BS.csv  iso3166-updates-BT.csv  iso3166-updates-BW.csv  iso3166-updates-BY.csv  iso3166-updates-CA.csv  iso3166-updates-CD.csv  iso3166-updates-CF.csv  iso3166-updates-CG.csv  iso3166-updates-CH.csv  iso3166-updates-CI.csv  iso3166-updates-CL.csv  iso3166-updates-CN.csv  iso3166-updates-CO.csv  iso3166-updates-CU.csv  iso3166-updates-CV.csv  iso3166-updates-CW.csv  (+126 more)
iso3166-updates-api/: GCP_ARCH.md  README.md  api-config.yml  gcp_architecture.excalidraw  main.py  requirements.txt
iso3166_check_for_updates/: Dockerfile  README.md  check_for_updates.py  get_all_iso3166_updates.py  requirements.txt
iso3166_updates/: README.md  __init__.py  iso3166-3.json  iso3166-updates.json  iso3166_updates.py
iso3166_updates_export/: README.md  __init__.py  driver.py  get_updates_data.py  iso3166-3.json  main.py  parse_updates_data.py  requirements.txt  utils.py
iso3166_updates_export/test-iso3166-updates/: iso3166-updates.csv  iso3166-updates.json  iso3166-updates_AD.json  iso3166-updates_AE.json  iso3166-updates_AF.json  iso3166-updates_AG.json  iso3166-updates_AI.json  iso3166-updates_AL.json  iso3166-updates_AM.json  iso3166-updates_AO.json  iso3166-updates_AQ.json  iso3166-updates_AR.json  iso3166-updates_AS.json  iso3166-updates_AT.json  iso3166-updates_AU.json  iso3166-updates_AW.json  iso3166-updates_AX.json  iso3166-updates_AZ.json  iso3166-updates_BA.json  iso3166-updates_BB.json  iso3166-updates_BD.json  iso3166-updates_BE.json  iso3166-updates_BF.json  iso3166-updates_BG.json  iso3166-updates_BH.json  iso3166-updates_BI.json  iso3166-updates_BJ.json  iso3166-updates_BL.json  iso3166-updates_BM.json  iso3166-updates_BN.json  iso3166-updates_BO.json  iso3166-updates_BQ.json  iso3166-updates_BR.json  iso3166-updates_BS.json  iso3166-updates_BT.json  iso3166-updates_BV.json  iso3166-updates_BW.json  iso3166-updates_BY.json  iso3166-updates_BZ.json  iso3166-updates_CA.json  (+207 more)
test-iso3166-updates/: iso3166-updates-AL.csv  iso3166-updates-MK.csv  iso3166-updates-SM.csv
tests/: README.md  requirements.txt  test-iso3166-updates.json  test_export_updates_driver.py  test_export_updates_get_updates_data.py  test_export_updates_main.py  test_export_updates_parse_updates_data.py  test_export_updates_utils.py  test_get_all_iso3166_updates.py  test_iso3166_check_for_updates.py  test_iso3166_updates.py  test_iso3166_updates_api.py
