[metadata]
name = iso3166-updates
author = AJ McKenna
author_email = amckenna41@qub.ac.uk
version = 0.0.2
description = A Python package that pulls the latest updates & changes to all ISO3166 listed countries.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
maintainer = AJ McKenna
keywords = 
    iso
    iso3166
    beautifulsoup
    python
    pypi
    countries
    country codes
    csv
    iso3166-2
    iso3166-1

# https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 3 - Alpha,
    Environment :: Console,
    Intended Audience :: Developers,
    Intended Audience :: Science/Research,
    Intended Audience :: Information Technology,
    License :: OSI Approved :: MIT License,
    License :: Free For Educational Use,
    Natural Language :: English,
    Programming Language :: Python :: 3.7,
    Programming Language :: Python :: 3.8,
    Programming Language :: Python :: 3.9,
    Programming Language :: Python :: 3.10,
    Programming Language :: Python :: 3.11,	
    Programming Language :: Python :: Implementation :: PyPy,
    Programming Language :: Python :: 3 :: Only,
    Topic :: Scientific/Engineering,
    Topic :: Scientific/Engineering :: Information Analysis,
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = false
packages = find:

install_requies =
    beautifulsoup4>=4.11.1
    pandas
    requests>=2.28.1
    iso3166

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-flake8
    pytest-timeout
docs =
    sphinx

[tool:pytest]
norecursedirs = /docs/_build/*
