[metadata]
name = iso3166-updates
version = 1.6.0
description = A Python package that pulls the latest updates & changes to all ISO 3166 listed countries and territories.
long_description = file: README.md
long_description_content_type = text/markdown
author = AJ McKenna
author_email = amckenna41@qub.ac.uk
url = https://github.com/amckenna41/iso3166-updates
download_url = https://github.com/amckenna41/iso3166-updates/archive/refs/heads/main.zip
license = MIT
status = Production
maintainer = AJ McKenna
keywords = 
    iso
    iso3166
    beautifulsoup
    python
    pypi
    countries
    country codes
    csv
    iso3166-2
    iso3166-1
    alpha2
    alpha3
    selenium
    chromedriver

# https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console,
    Intended Audience :: Developers,
    Intended Audience :: Science/Research,
    Intended Audience :: Information Technology,
    License :: OSI Approved :: MIT License,
    License :: Free For Educational Use,
    Natural Language :: English,
    Programming Language :: Python :: 3.8,
    Programming Language :: Python :: 3.9,
    Programming Language :: Python :: 3.10,
    Programming Language :: Python :: 3.11,	
    Programming Language :: Python :: Implementation :: PyPy,
    Programming Language :: Python :: 3 :: Only,
    Topic :: Scientific/Engineering,
    Topic :: Scientific/Engineering :: Information Analysis,
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.8
zip_safe = False
include_package_data = True
packages = find:

install_requies =
    iso3166

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-flake8
    pytest-timeout
docs =
    sphinx

[tool:pytest]
norecursedirs = /docs/_build/*